--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -47,8 +47,8 @@
    "source": [
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "- **A kluster.ai account** - Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key** - After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
@@ -340,11 +340,11 @@
    "source": [
     "For this particular tutorial, we predefined five requests for the model to execute based on common customer use cases:\n",
     "\n",
-    "- **Sentiment analysis** - reviewing text to determine whether there is positive, neutral, or negative notation to the statement\n",
-    "- **Translation** - translate the text to any other language, in this example, Spanish\n",
-    "- **Summarization** - express the text in a concise form\n",
-    "- **Topic classification** - classify the text between a given set of categories\n",
-    "- **Keyword extraction** - provide a number of keywords\n",
+    "- **Sentiment analysis** - Reviewing text to determine whether there is positive, neutral, or negative notation to the statement.\n",
+    "- **Translation** - Translate the text to any other language, in this example, Spanish.\n",
+    "- **Summarization** - Express the text in a concise form.\n",
+    "- **Topic classification** - Classify the text between a given set of categories.\n",
+    "- **Keyword extraction** - Provide a number of keywords.\n",
     "\n",
     "Requests are defined as a system prompt. This example runs through different types of requests, so they are defined as JSON objects. For each use case, we also defined the structure of the response we expect from the model.\n",
     "\n",
@@ -1170,10 +1170,10 @@
     "\n",
     "To submit a batch job we've:\n",
     "\n",
-    "1. Created the JSONL file, where each line of the file represented a separate request (for each task and element of dataset)\n",
-    "2. Submitted the file to the platform\n",
-    "3. Started the batch job, and monitored its progress\n",
-    "4. Once completed, we fetched the results\n",
+    "1. Created the JSONL file, where each line of the file represented a separate request (for each task and element of dataset).\n",
+    "2. Submitted the file to the platform.\n",
+    "3. Started the batch job, and monitored its progress.\n",
+    "4. Once completed, we fetched the results.\n",
     "\n",
     "All of this using the OpenAI Python library and API, no changes needed!\n",
     "\n",
